[gd_scene load_steps=2 format=3 uid="uid://ejgbbaslnfet"]

[ext_resource type="Script" path="res://Scenes/GUI/dialogue_box.gd" id="1_sw82a"]

[node name="DialogueBox" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sw82a")

[node name="DialogueBackground" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.772
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.256012
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="DialogueText" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 500.0
offset_right = 1152.0
offset_bottom = 648.0
bbcode_enabled = true
scroll_active = false

[node name="NameBackground" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.772
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -67.256
offset_right = -918.0
offset_bottom = -148.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="NameText" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 433.0
offset_right = 234.0
offset_bottom = 500.0
theme_override_font_sizes/normal_font_size = 43
bbcode_enabled = true
scroll_active = false
autowrap_mode = 0

[node name="ChoiceList" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 567.0
offset_top = 330.0
offset_right = 1152.0
offset_bottom = 490.0
alignment = 2
